--- a/Research.css
+++ b/Research.css
@@ -1,19 +1,78 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 263px;
+  min-height: 303px;
 }
 
 .u-section-1 .u-text-1 {
   margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.u-section-1 .u-image-1 {
+  width: 197px;
+  height: 263px;
+  --radius: 14px;
+  margin: -49px 71px 0 auto;
 }
 
 .u-section-1 .u-text-2 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 0;
+  margin: -195px 355px 53px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-text-2 {
+    margin-right: 155px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-text-2 {
+    margin-right: 0;
+  }
 }.u-section-2 .u-sheet-1 {
   min-height: 400px;
 }
 
 .u-section-2 .u-text-1 {
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-2 {
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-3 {
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-4 {
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-5 {
+  margin-left: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-6 {
+  margin-left: 0;
+  margin-right: auto;
   margin-bottom: 60px;
+}.u-section-3 .u-sheet-1 {
+  min-height: 64px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 20px auto;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  padding: 0;
 }
