--- a/Research.css
+++ b/Research.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 303px;
+  min-height: 293px;
 }
 
 .u-section-1 .u-text-1 {
@@ -8,19 +8,19 @@
 }
 
 .u-section-1 .u-image-1 {
-  width: 197px;
+  width: 264px;
   height: 263px;
   --radius: 14px;
-  margin: -49px 71px 0 auto;
+  margin: -49px 20px 0 auto;
 }
 
 .u-section-1 .u-text-2 {
-  margin: -195px 355px 53px 0;
+  margin: -195px 314px 43px 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-2 {
-    margin-right: 155px;
+    margin-right: 114px;
   }
 }
 
@@ -29,41 +29,874 @@
     margin-right: 0;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 467px;
 }
 
 .u-section-2 .u-text-1 {
-  margin-bottom: 0;
+  margin: 11px auto 0 0;
+}
+
+.u-section-2 .u-accordion-1 {
+  width: 1118px;
+  margin: 20px auto;
+}
+
+.u-section-2 .u-accordion-link-1 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-1 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-2 .u-accordion-pane-1 {
+  min-height: 472px;
+  height: auto;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px 15px;
 }
 
 .u-section-2 .u-text-2 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 0;
+  margin: 0 30px 0 0;
+}
+
+.u-section-2 .u-gallery-1 {
+  height: 375px;
+  width: 426px;
+  margin: -32px 15px 0 auto;
+}
+
+.u-section-2 .u-carousel-indicators-1 {
+  position: absolute;
+  bottom: 10px;
+}
+
+.u-section-2 .u-gallery-inner-1 {
+  --gap: 0px;
+}
+
+.u-section-2 .u-carousel-item-1 {
+  margin-right: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-over-slide-1 {
+  width: 426px;
+  height: 100px;
+  padding: 5px;
+}
+
+.u-section-2 .u-carousel-item-2 {
+  margin-right: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-over-slide-2 {
+  width: 426px;
+  height: 100px;
+  padding: 5px;
+}
+
+.u-section-2 .u-carousel-item-3 {
+  margin-right: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-over-slide-3 {
+  width: 426px;
+  height: 100px;
+  padding: 5px;
+}
+
+.u-section-2 .u-carousel-item-4 {
+  margin-right: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-over-slide-4 {
+  width: 426px;
+  height: 100px;
+  padding: 5px;
+}
+
+.u-section-2 .u-carousel-item-5 {
+  margin-right: 0;
+  margin-top: 0;
+}
+
+.u-section-2 .u-over-slide-5 {
+  width: 426px;
+  height: 100px;
+  padding: 5px;
+}
+
+.u-section-2 .u-carousel-control-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  top: 117px;
+  padding: 4px;
+}
+
+.u-section-2 .u-carousel-control-2 {
+  position: absolute;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  top: 117px;
+  padding: 4px;
 }
 
 .u-section-2 .u-text-3 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 0;
+  margin: -324px 451px 0 20px;
+}
+
+.u-section-2 .u-accordion-link-2 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-2 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-2 .u-accordion-pane-2 {
+  min-height: 495px;
+  height: auto;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px 15px;
 }
 
 .u-section-2 .u-text-4 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+.u-section-2 .u-image-1 {
+  width: 346px;
+  height: 341px;
+  margin: 11px 0 0 auto;
 }
 
 .u-section-2 .u-text-5 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 0;
+  margin: -341px 375px 0 30px;
 }
 
 .u-section-2 .u-text-6 {
-  margin-left: 0;
-  margin-right: auto;
-  margin-bottom: 60px;
+  text-decoration: underline !important;
+  margin: 4px 375px 0 47px;
+}
+
+.u-section-2 .u-text-7 {
+  margin: -1px 375px 0 47px;
+}
+
+.u-section-2 .u-accordion-link-3 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-3 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-2 .u-accordion-pane-3 {
+  min-height: 843px;
+  height: auto;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 30px 15px;
+}
+
+.u-section-2 .u-text-8 {
+  margin: 0;
+}
+
+.u-section-2 .u-text-9 {
+  margin: 20px 322px 0 30px;
+}
+
+.u-section-2 .u-image-2 {
+  width: 270px;
+  height: 416px;
+  margin: -386px 0 0 auto;
+}
+
+.u-section-2 .u-text-10 {
+  text-decoration: underline !important;
+  margin: -19px 920px 0 50px;
+}
+
+.u-section-2 .u-text-11 {
+  margin: 7px 321px 0 50px;
+}
+
+.u-section-2 .u-btn-1 {
+  font-size: 20.25px;
+  text-align: left;
+  background-color: rgb(255, 255, 255);
+  font-family: Lato, sans-serif;
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-2 {
+  font-size: 20.25px;
+  text-align: left;
+  background-color: rgb(255, 255, 255);
+  font-family: Lato, sans-serif;
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-video-1 {
+  width: 270px;
+  height: 212px;
+  margin: -93px 0 0 auto;
+}
+
+.u-section-2 .u-text-12 {
+  text-decoration: underline !important;
+  margin: -108px 322px 0 49px;
+}
+
+.u-section-2 .u-text-13 {
+  margin: 11px 316px 0 49px;
+}
+
+.u-section-2 .u-accordion-link-4 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-4 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-2 .u-accordion-pane-4 {
+  min-height: 759px;
+  height: auto;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 30px 15px;
+}
+
+.u-section-2 .u-text-14 {
+  margin: 0;
+}
+
+.u-section-2 .u-image-3 {
+  width: 310px;
+  height: 268px;
+  margin: -26px 19px 0 auto;
+}
+
+.u-section-2 .u-text-15 {
+  margin: -233px 358px 0 20px;
+}
+
+.u-section-2 .u-text-16 {
+  text-decoration: underline !important;
+  margin: 5px 926px 0 38px;
+}
+
+.u-section-2 .u-text-17 {
+  margin: 2px 39px 0;
+}
+
+.u-section-2 .u-btn-3 {
+  font-size: 20.25px;
+  text-align: left;
+  background-color: rgb(255, 255, 255);
+  font-family: Lato, sans-serif;
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-4 {
+  font-size: 20.25px;
+  text-align: left;
+  background-color: rgb(255, 255, 255);
+  font-family: Lato, sans-serif;
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-text-18 {
+  margin: 11px 0 0 19px;
+}
+
+.u-section-2 .u-text-19 {
+  text-decoration: underline !important;
+  margin: 13px 39px 0;
+}
+
+.u-section-2 .u-text-20 {
+  margin: -1px 39px 0;
+}
+
+.u-section-2 .u-accordion-link-5 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 20px 30px;
+}
+
+.u-section-2 .u-icon-5 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-2 .u-accordion-pane-5 {
+  min-height: 472px;
+  height: auto;
+}
+
+.u-section-2 .u-container-layout-5 {
+  padding: 30px 15px;
+}
+
+.u-section-2 .u-text-21 {
+  margin: 0 386px 0 0;
+}
+
+.u-section-2 .u-image-4 {
+  width: 375px;
+  height: 437px;
+  margin: -421px 0 0 auto;
+}
+
+.u-section-2 .u-text-22 {
+  text-decoration: underline !important;
+  margin: -6px 386px 0 23px;
+}
+
+.u-section-2 .u-text-23 {
+  margin: 0 386px 0 23px;
+}
+
+.u-section-2 .u-btn-5 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-2 .u-btn-6 {
+  background-image: none;
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-accordion-1 {
+    width: 940px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-carousel-item-1 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-carousel-item-2 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-carousel-item-3 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-over-slide-3 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-carousel-item-4 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-over-slide-4 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-carousel-item-5 {
+    margin-bottom: 0;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 8px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 8px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 0;
+    margin-right: 293px;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 0;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: -334px;
+    margin-right: 227px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: -10px;
+    margin-right: 244px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-top: 0;
+    margin-right: 244px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-right: 174px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: -421px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-top: 35px;
+    margin-right: 792px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-top: 37px;
+    margin-right: 144px;
+    margin-left: 19px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    font-size: 20.25rem;
+  }
+
+  .u-section-2 .u-btn-2 {
+    font-size: 20.25rem;
+  }
+
+  .u-section-2 .u-video-1 {
+    margin-top: -177px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-top: -206px;
+    margin-right: 193px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-13 {
+    margin-top: 211px;
+    margin-right: 187px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-14 {
+    margin-top: -257px;
+  }
+
+  .u-section-2 .u-image-3 {
+    margin-top: 184px;
+  }
+
+  .u-section-2 .u-text-15 {
+    margin-top: -263px;
+    margin-right: 200px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-16 {
+    margin-left: 0;
+    margin-right: 786px;
+  }
+
+  .u-section-2 .u-text-17 {
+    margin-top: -328px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    font-size: 20.25rem;
+  }
+
+  .u-section-2 .u-btn-4 {
+    font-size: 20.25rem;
+  }
+
+  .u-section-2 .u-text-18 {
+    margin-top: -7px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-19 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-20 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-21 {
+    margin-top: 55px;
+    margin-right: 208px;
+  }
+
+  .u-section-2 .u-image-4 {
+    margin-top: -258px;
+  }
+
+  .u-section-2 .u-text-22 {
+    margin-top: -149px;
+    margin-right: 231px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-23 {
+    margin-right: 231px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-accordion-1 {
+    width: 720px;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 6px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 6px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 73px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-right: 7px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-right: 24px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-right: 24px;
+  }
+
+  .u-section-2 .u-text-9 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: -486px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-top: 28px;
+    margin-right: 572px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-video-1 {
+    margin-top: -209px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-top: -174px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-13 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-15 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-16 {
+    margin-right: 566px;
+  }
+
+  .u-section-2 .u-text-21 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-22 {
+    margin-right: 11px;
+  }
+
+  .u-section-2 .u-text-23 {
+    margin-right: 11px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-accordion-1 {
+    width: 540px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 5px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 5px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 33px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: -366px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 8px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-top: -14px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: -605px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-top: 158px;
+    margin-right: 402px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-top: 26px;
+  }
+
+  .u-section-2 .u-video-1 {
+    margin-top: -231px;
+  }
+
+  .u-section-2 .u-text-12 {
+    margin-top: -210px;
+  }
+
+  .u-section-2 .u-text-13 {
+    margin-top: 268px;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-text-14 {
+    margin-top: -250px;
+  }
+
+  .u-section-2 .u-image-3 {
+    margin-top: 216px;
+  }
+
+  .u-section-2 .u-text-15 {
+    margin-top: -292px;
+  }
+
+  .u-section-2 .u-text-16 {
+    margin-right: 396px;
+  }
+
+  .u-section-2 .u-text-17 {
+    margin-top: -339px;
+  }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-4 {
+    margin-top: -262px;
+  }
+
+  .u-section-2 .u-text-22 {
+    margin-top: -146px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-23 {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-accordion-1 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-gallery-1 {
+    width: 320px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-over-slide-1 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-over-slide-2 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-over-slide-3 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-over-slide-4 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-over-slide-5 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-carousel-control-1 {
+    left: 3px;
+  }
+
+  .u-section-2 .u-carousel-control-2 {
+    right: 3px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-top: 208px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 320px;
+    height: 315px;
+    margin-top: -204px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: -527px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 49px;
+  }
+
+  .u-section-2 .u-text-7 {
+    margin-top: 108px;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: -1065px;
+  }
+
+  .u-section-2 .u-text-10 {
+    margin-top: 734px;
+    margin-right: 202px;
+  }
+
+  .u-section-2 .u-text-11 {
+    margin-top: -89px;
+  }
+
+  .u-section-2 .u-text-14 {
+    margin-top: -135px;
+  }
+
+  .u-section-2 .u-image-3 {
+    margin-right: 10px;
+  }
+
+  .u-section-2 .u-text-15 {
+    margin-top: -465px;
+  }
+
+  .u-section-2 .u-text-16 {
+    margin-right: 196px;
+  }
+
+  .u-section-2 .u-text-17 {
+    margin-top: -281px;
+  }
+
+  .u-section-2 .u-text-21 {
+    margin-top: -9px;
+  }
+
+  .u-section-2 .u-image-4 {
+    width: 320px;
+    height: 373px;
+    margin-top: -342px;
+  }
+
+  .u-section-2 .u-text-22 {
+    margin-top: -2px;
+  }
 }.u-section-3 .u-sheet-1 {
   min-height: 64px;
 }
