--- a/Beyond-Research.css
+++ b/Beyond-Research.css
@@ -183,6 +183,16 @@
     min-height: 318px;
   }
 
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 375px;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
   .u-section-1 .u-carousel-control-1 {
     left: 5px;
   }
@@ -193,8 +203,31 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 889px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 21px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-bottom: 21px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 467px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 238px;
+  }
+
   .u-section-1 .u-gallery-1 {
-    width: 340px;
+    height: 224px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-carousel-control-1 {
@@ -205,7 +238,7 @@
     right: 3px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 434px;
+  min-height: 457px;
 }
 
 .u-section-2 .u-text-1 {
@@ -218,94 +251,153 @@
   transform-origin: left center;
 }
 
+.u-section-2 .u-layout-wrap-1 {
+  margin-top: 17px;
+  margin-bottom: 17px;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 360px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 0;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 0 -17px 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 20px 2px 0 auto;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 32px 1px 0;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 360px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 16px 9px;
+}
+
 .u-section-2 .u-image-1 {
   --radius: 10px;
   width: 533px;
   height: 300px;
-  margin: 17px 0 0 auto;
-}
-
-.u-section-2 .u-text-2 {
-  margin: -300px 553px 0 0;
-}
-
-.u-section-2 .u-text-3 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-2 .u-text-4 {
-  margin: 19px 553px 23px 0;
+  margin: 0 auto;
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 387px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 297px;
+  }
+
   .u-section-2 .u-text-2 {
-    margin-right: 353px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-text-4 {
-    margin-right: 353px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 297px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 436px;
+    height: 245px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-text-2 {
-    margin-right: 133px;
+  .u-section-2 .u-sheet-1 {
+    min-height: 310px;
   }
 
-  .u-section-2 .u-text-4 {
-    margin-right: 133px;
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 227px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 330px;
+    height: 185px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-2 {
-    margin-right: 0;
+  .u-section-2 .u-sheet-1 {
+    min-height: 550px;
   }
 
-  .u-section-2 .u-text-4 {
-    margin-right: 0;
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 352px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 512px;
+    height: 287px;
+    margin-top: 33px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 325px;
+    min-height: 404px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 222px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 340px;
-    height: 191px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-top: -191px;
+    width: 322px;
+    height: 180px;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 406px;
+  min-height: 434px;
 }
 
 .u-section-3 .u-text-1 {
-  margin: 41px auto 0;
+  margin: 31px auto 0;
 }
 
 .u-section-3 .u-line-1 {
-  margin-top: 0;
+  margin-top: 29px;
   margin-bottom: 0;
   transform-origin: left center;
 }
 
 .u-section-3 .u-text-2 {
-  margin: 29px auto 0 0;
-}
-
-.u-section-3 .u-text-3 {
   margin: 9px auto 0 0;
 }
 
-.u-section-3 .u-text-4 {
+.u-section-3 .u-text-3 {
   margin: 31px auto 0 0;
 }
 
+.u-section-3 .u-text-4 {
+  margin: 9px auto 0 0;
+}
+
 .u-section-3 .u-text-5 {
-  margin: 9px auto 41px 0;
+  margin: 20px auto 60px 0;
 }
