--- a/nicepage.css
+++ b/nicepage.css
@@ -46098,9 +46098,21 @@ a.u-link.u-text-hover-color-var:hover {
   margin: -45px 0 0 auto;
 }
 
+.u-header .u-hamburger-link-1 {
+  transform: scaleX(-1) scaleY(-1);
+  transform-origin: center center;
+}
+
 .u-header .u-nav-1 {
   font-size: 1rem;
-  letter-spacing: 0px;
+}
+
+.u-header .u-sidenav-1 {
+  width: 188px;
+  --sidenav-width: 187.5px;
+  margin-right: 0;
+  margin-left: 0;
+  padding: 0 0 5px;
 }
 
 .u-header .u-nav-2 {
@@ -46120,41 +46132,112 @@ a.u-link.u-text-hover-color-var:hover {
   margin: -41px auto 26px 72px;
 }
 @media (max-width: 1199px) {
+  .u-header .u-sheet-1 {
+    min-height: 108px;
+  }
+
   .u-header .u-text-1 {
-    margin-top: 98px;
+    width: auto;
+    margin-top: 30px;
+    margin-right: 436px;
+    margin-left: 195px;
   }
 
   .u-header .u-menu-1 {
     width: auto;
-    margin-top: -29px;
+    margin-top: -43px;
     margin-right: 0;
   }
 
   .u-header .u-icon-1 {
+    margin-top: -42px;
     margin-left: 13px;
   }
 
   .u-header .u-icon-2 {
+    margin-bottom: 36px;
     margin-left: 72px;
   }
 }
 @media (max-width: 991px) {
-  .u-header .u-text-1 {
-    margin-top: 102px;
+  .u-header .u-sheet-1 {
+    min-height: 148px;
   }
-}
-@media (max-width: 767px) {
+
   .u-header .u-text-1 {
-    margin-top: 54px;
+    width: 358px;
+    margin-top: 26px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-header .u-menu-1 {
-    margin-top: 31px;
+    margin-top: 22px;
+    margin-right: 0;
+  }
+
+  .u-header .u-icon-1 {
+    margin-top: -50px;
+    margin-left: 12px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-bottom: 22px;
+    margin-left: 71px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: 136px;
+  }
+
+  .u-header .u-text-1 {
+    margin-top: 29px;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: 13px;
+  }
+
+  .u-header .u-icon-1 {
+    margin-top: -42px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-bottom: 17px;
+    margin-left: 71px;
   }
 }
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 67px;
+  }
+
   .u-header .u-text-1 {
-    margin-top: 60px;
+    width: auto;
+    margin-top: 18px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: -33px;
+    margin-right: 0;
+  }
+
+  .u-header .u-sidenav-1 {
+    width: 211px;
+    --sidenav-width: 210.5px;
+  }
+
+  .u-header .u-icon-1 {
+    margin-top: -40px;
+    margin-left: -46px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-bottom: 9px;
+    margin-left: 0;
   }
 }
  .u-footer {
